# kovel

./: .clang-format  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  build_wx.sh  docker-compose.yml  format-tidy.sh  index.html  params.json  upload_ppa.sh
cli/: cli.cpp
core/: core.cpp  core.hpp  version.hpp
debian/: Kovel.1  changelog  control  kovel-cli.install  kovel.install  kovel.manpages  kovel.sharedmimeinfo  postinst  rules
docs/: AppOrganization.md  FileFormat.md
resources/: application-x-kovel-voxel.xml  kovel.desktop  kovel.hvif  kovel.rc  kovel.rdef  kovel.xpm
samples/: 3x3.kvl  Algo.kvl  Casa.kvl  Cuadrancia.kvl  CubeCopy.kvl  Europa.kvl  KOVEL.kvl  KOVEL2.kvl  Sample.kvl  Single.kvl  Spain.kvl  Test.kvl
test/: Cube.kvl  test_dae.sh  test_json.sh
ui/gl/: gl1.cpp  gl1.hpp
ui/haiku/: app.cpp  metadata.cpp  metadata.hpp  preview.cpp  preview.hpp  window.cpp  window.hpp
ui/wx/: app.cpp  metadata.cpp  metadata.hpp  preview.cpp  preview.hpp  window.cpp  window.hpp
